--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          python -m pip install --upgraded pip
+          python -m pip install --upgrade pip
           pip install -r requirement.txt
       - name: Lint with flake8
         run: |
