--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -35,8 +35,6 @@ spec:
         fi
 
 ---
-
----
 apiVersion: tekton.dev/v1beta1
 kind: task
 metadata:
@@ -45,7 +43,7 @@ spec:
   workspaces:
     - name: source
   params:
-    - name: argss
+    - name: args
       description: Arguments to pass to nose
       type: string
       default: "-v"
@@ -54,8 +52,8 @@ spec:
       image: python:3.9-slim
       workingDir: $(workspaces.source.path)
       script: |
-          #!/bin/bash
-          set -e
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
-          nosetests $(params.args)
+        #!/bin/bash
+        set -e
+        python -m pip install --upgrade pip wheel
+        pip install -r requirements.txt
+        nosetests $(params.args)
